--- a/lupus-users/package.json
+++ b/lupus-users/package.json
@@ -7,11 +7,11 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
-    "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "morgan": "~1.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.10.2"
   }
 }
