--- a/lupus-users/package.json
+++ b/lupus-users/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.15.1",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "mongoose": "^4.5.10",
     "morgan": "~1.7.0"
   },
   "devDependencies": {
