--- a/lupus-users/package.json
+++ b/lupus-users/package.json
@@ -10,7 +10,8 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "mongoose": "^4.5.10",
-    "morgan": "~1.7.0"
+    "morgan": "~1.7.0",
+    "redis": "^2.6.2"
   },
   "devDependencies": {
     "nodemon": "^1.10.2"
