Added readme and updated lupus-users Dockerfile

--- a/lupus-users/Dockerfile
+++ b/lupus-users/Dockerfile
@@ -1,4 +1,8 @@
 FROM node:6.5.0
 
+ADD . /app
 WORKDIR /app
-CMD node node_modules/nodemon/bin/nodemon.js -L
+
+RUN npm install
+
+ENTRYPOINT node node_modules/nodemon/bin/nodemon.js -L
