--- a/lupus-users/package.json
+++ b/lupus-users/package.json
@@ -6,7 +6,9 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "apickli": "^1.7.0",
     "body-parser": "~1.15.1",
+    "cucumber": "^1.2.2",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "mongoose": "^4.5.10",
