A lot of things
- Implemented POST /users to create a new user
- Added tests for new user
- Fixed problem with tests container (--rm)
- A lot of mongoose debugging (save => $__save)

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,8 +1,5 @@
 FROM node:6.5.0
 
-ADD . /app
-WORKDIR /app
+WORKDIR /app/tests
 
-RUN npm install
-
-ENTRYPOINT node node_modules/.bin/cucumber-js
+ENTRYPOINT ["node", "node_modules/.bin/cucumber-js"]
