--- a/lupus-proxy/nginx.conf
+++ b/lupus-proxy/nginx.conf
@@ -22,6 +22,8 @@ http {
 		server_name _;
 
 		location /users {
+			proxy_set_header X-Real-IP       $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_pass http://lupus-users;
 		}
 
