--- a/lupus-users/package.json
+++ b/lupus-users/package.json
@@ -13,7 +13,9 @@
     "express": "~4.13.4",
     "mongoose": "^4.5.10",
     "morgan": "~1.7.0",
-    "redis": "^2.6.2"
+    "password-hash": "^1.2.2",
+    "redis": "^2.6.2",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "nodemon": "^1.10.2"
