Added login API
Sessions are stored in redis

Updated tests

--- a/lupus-users/Dockerfile
+++ b/lupus-users/Dockerfile
@@ -3,6 +3,4 @@ FROM node:6.5.0
 ADD . /app
 WORKDIR /app
 
-RUN npm install
-
-ENTRYPOINT node node_modules/nodemon/bin/nodemon.js -L
+CMD node node_modules/nodemon/bin/nodemon.js -L
