--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
         build: ./lupus-users
         volumes:
             - ./lupus-users:/app
+            - ./lupus-common:/app/common
         environment:
             DEBUG: lupus-users:*
         stdin_open: true
