--- a/lupus-proxy/nginx.conf
+++ b/lupus-proxy/nginx.conf
@@ -16,15 +16,24 @@ http {
 		server lupus-users:3000;
 	}
 
+	upstream lupus-history {
+		server lupus-history:3000;
+	}
+
 	server {
 		listen 80;
 
 		server_name _;
 
+		proxy_set_header X-Real-IP       $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
 		location /users {
-			proxy_set_header X-Real-IP       $remote_addr;
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_pass http://lupus-users;
+		}
+
+		location /history {
+			proxy_pass http://lupus-history;
 		}
 
 		error_page   500 502 503 504  /50x.html;
