--- a/lupus-history/package.json
+++ b/lupus-history/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "lupus-users",
+  "name": "lupus-history",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "prepare": "docker run --rm -v $(pwd):/app --entrypoint npm -it lupus_lupus-users install",
+    "prepare": "docker run --rm -v $(pwd):/app --entrypoint npm -it lupus_lupus-history install",
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^0.8.7",
     "body-parser": "~1.15.1",
-    "cucumber": "^1.2.2",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "mongoose": "^4.5.10",
