--- a/lupus-history/package.json
+++ b/lupus-history/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "prepare": "docker run --rm -v $(pwd):/app -v $(pwd)/../lupus-common:/lupus-common --entrypoint npm -it lupus_lupus-history install",
+    "prepare": "docker run --rm -v $(pwd):/app -v $(pwd)/../lupus-common:/lupus-common --entrypoint npm -it lupusintabula_lupus-history install",
     "start": "node ./bin/www"
   },
   "dependencies": {
