The containers now don't run as root
Each container has its runner user with uid 1000. So the directories
created by the container (node_modules) are owned by 1000:1000 (the same
as my local user) and not by root:root

--- a/lupus-history/Dockerfile
+++ b/lupus-history/Dockerfile
@@ -3,4 +3,8 @@ FROM node:6.5.0
 ADD . /app
 WORKDIR /app
 
+RUN adduser --disabled-password --gecos '' runner
+
+USER runner
+
 CMD node node_modules/nodemon/bin/nodemon.js -L
