--- a/lupus-proxy/nginx.conf
+++ b/lupus-proxy/nginx.conf
@@ -20,6 +20,10 @@ http {
 		server lupus-history:3000;
 	}
 
+	upstream lupus-game {
+		server lupus-game:3000;
+	}
+
 	server {
 		listen 80;
 
@@ -34,6 +38,10 @@ http {
 
 		location /history {
 			proxy_pass http://lupus-history;
+		}
+
+		location /game {
+			proxy_pass http://lupus-game;
 		}
 
 		error_page   500 502 503 504  /50x.html;
