--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,11 @@ services:
     - docker
 
 before_install:
-    - docker-compose build
-    - cd tests && npm run build && cd ..
-    - for srv in lupus-users lupus-history tests; do echo "Installing $srv" && cd $srv && npm run prepare && cd ..; done
+    - ./prepare.sh
     - docker-compose up -d
 
 script:
-    - cd tests && npm test
+    - cd tests && npm test && cd ..
 
 after_failure:
-    - docker-compose logs lupus-users lupus-history proxy
+    - docker-compose logs
