Added socket.io support for lupus-game
Now a user can connect to /game/socket.io and use a WebSocket to follow
a game. The authentication process is done via the socket

--- a/lupus-proxy/nginx.conf
+++ b/lupus-proxy/nginx.conf
@@ -42,6 +42,8 @@ http {
 
 		location /game {
 			proxy_pass http://lupus-game;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
 		}
 
 		error_page   500 502 503 504  /50x.html;
