--- a/lupus-game/package.json
+++ b/lupus-game/package.json
@@ -10,11 +10,13 @@
 		"body-parser": "~1.15.1",
 		"debug": "~2.2.0",
 		"express": "~4.13.4",
+		"lupus-common": "../lupus-common",
 		"mongoose": "^4.5.10",
 		"morgan": "~1.7.0",
 		"redis": "^2.6.2",
-		"underscore": "^1.8.3",
-		"lupus-common": "../lupus-common"
+		"socket.io": "^1.4.8",
+		"socketio-auth": "0.0.5",
+		"underscore": "^1.8.3"
 	},
 	"devDependencies": {
 		"nodemon": "^1.10.2"
