--- a/lupus-proxy/nginx.conf
+++ b/lupus-proxy/nginx.conf
@@ -24,6 +24,10 @@ http {
 		server lupus-game:3000;
 	}
 
+	upstream lupus-frontend {
+		server lupus-frontend:3000;
+	}
+
 	server {
 		listen 80;
 
@@ -42,6 +46,12 @@ http {
 
 		location /game {
 			proxy_pass http://lupus-game;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
+		}
+
+		location / {
+			proxy_pass http://lupus-frontend;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "upgrade";
 		}
