--- a/lupus-frontend/package.json
+++ b/lupus-frontend/package.json
@@ -23,6 +23,7 @@
 		"angular2-cookie": "^1.2.3",
 		"bootstrap": "^3.3.6",
 		"core-js": "^2.4.1",
+		"jquery": "^3.1.0",
 		"reflect-metadata": "^0.1.3",
 		"rxjs": "5.0.0-beta.11",
 		"systemjs": "0.19.27",
