--- a/lupus-proxy/nginx.conf
+++ b/lupus-proxy/nginx.conf
@@ -33,19 +33,20 @@ http {
 
 		server_name _;
 
+		proxy_redirect off;
 		proxy_set_header X-Real-IP       $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-		location /users {
-			proxy_pass http://lupus-users;
+		location /api/users {
+			proxy_pass http://lupus-users/users;
 		}
 
-		location /history {
-			proxy_pass http://lupus-history;
+		location /api/history {
+			proxy_pass http://lupus-history/history;
 		}
 
-		location /game {
-			proxy_pass http://lupus-game;
+		location /api/game {
+			proxy_pass http://lupus-game/game;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "upgrade";
 		}
