--- a/lupus-frontend/package.json
+++ b/lupus-frontend/package.json
@@ -24,6 +24,7 @@
 		"bootstrap": "^3.3.6",
 		"core-js": "^2.4.1",
 		"jquery": "^3.1.0",
+		"ng2-slim-loading-bar": "^1.5.1",
 		"reflect-metadata": "^0.1.3",
 		"rxjs": "5.0.0-beta.11",
 		"systemjs": "0.19.27",
