--- a/lupus-history/package.json
+++ b/lupus-history/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "lupus-history",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "prepare": "./bin/prepare.sh",
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "~1.15.1",
-    "debug": "~2.2.0",
-    "express": "~4.13.4",
-    "mongoose": "^4.5.10",
-    "morgan": "~1.7.0",
-    "redis": "^2.6.2",
-    "underscore": "^1.8.3",
-	"lupus-common": "../lupus-common"
-  },
-  "devDependencies": {
-    "nodemon": "^1.10.2"
-  }
+	"name": "lupus-history",
+	"version": "0.0.0",
+	"private": true,
+	"main": "./bin/www",
+	"scripts": {
+		"prepare": "./bin/prepare.sh",
+		"start-coverage": "node ./node_modules/istanbul/lib/cli cover --handle-sigint ./bin/www",
+		"start": "node node_modules/nodemon/bin/nodemon.js -L"
+	},
+	"dependencies": {
+		"body-parser": "~1.15.1",
+		"debug": "~2.2.0",
+		"express": "~4.13.4",
+		"mongoose": "^4.5.10",
+		"morgan": "~1.7.0",
+		"redis": "^2.6.2",
+		"underscore": "^1.8.3",
+		"lupus-common": "/lupus-common"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.14.0",
+		"istanbul": "^0.4.5",
+		"nodemon": "^1.10.2"
+	}
 }
