--- a/docker-compose.tests.yml
+++ b/docker-compose.tests.yml
@@ -8,6 +8,7 @@ services:
             DEBUG: lupus-users:*
         stdin_open: true
         tty: true
+        command: npm run start-coverage
         depends_on:
             - mongo
             - redis
@@ -20,6 +21,7 @@ services:
             DEBUG: lupus-history:*
         stdin_open: true
         tty: true
+        command: npm run start-coverage
         depends_on:
             - mongo
             - redis
@@ -32,6 +34,7 @@ services:
             DEBUG: lupus-game:*
         stdin_open: true
         tty: true
+        command: npm run start-coverage
         depends_on:
             - mongo
             - redis
