Removed lupus-frontend microserivce
Now nginx serves the static files
lupus-frontend docker is useful for compiling the code

--- a/lupus-proxy/nginx.conf
+++ b/lupus-proxy/nginx.conf
@@ -24,14 +24,11 @@ http {
 		server lupus-game:3000;
 	}
 
-	upstream lupus-frontend {
-		server lupus-frontend:3000;
-	}
-
 	server {
 		listen 80;
 
 		server_name _;
+		root /app;
 
 		proxy_redirect off;
 		proxy_set_header X-Real-IP       $remote_addr;
@@ -51,10 +48,12 @@ http {
 			proxy_set_header Connection "upgrade";
 		}
 
+		location /node_modules { try_files $uri =404; }
+		location /app          { try_files $uri =404; }
+		location /build        { try_files $uri =404; }
+
 		location / {
-			proxy_pass http://lupus-frontend;
-			proxy_set_header Upgrade $http_upgrade;
-			proxy_set_header Connection "upgrade";
+			try_files $uri /index.html;
 		}
 
 		error_page   500 502 503 504  /50x.html;
