--- a/lupus-frontend/package.json
+++ b/lupus-frontend/package.json
@@ -6,7 +6,8 @@
 		"build": "docker build -t lupusintabula_lupus-frontend .",
 		"prepare": "docker run --rm -v $(pwd):/app --entrypoint npm lupusintabula_lupus-frontend install",
 		"postinstall": "typings install",
-		"typings": "typings"
+		"typings": "typings",
+		"production": "echo 'Nothing yet...'"
 	},
 	"license": "MIT",
 	"dependencies": {
@@ -31,7 +32,6 @@
 		"zone.js": "^0.6.17"
 	},
 	"devDependencies": {
-		"lite-server": "^2.2.2",
 		"typescript": "^1.8.10",
 		"typings": "^1.3.2"
 	}
