--- a/lupus-frontend/package.json
+++ b/lupus-frontend/package.json
@@ -29,6 +29,7 @@
 		"ng2-slim-loading-bar": "^1.5.1",
 		"reflect-metadata": "^0.1.3",
 		"rxjs": "5.0.0-beta.11",
+		"socket.io-client": "^1.4.8",
 		"systemjs": "0.19.27",
 		"zone.js": "^0.6.17"
 	},
