--- a/lupus-game/package.json
+++ b/lupus-game/package.json
@@ -15,6 +15,7 @@
 		"lupus-common": "../lupus-common",
 		"mongoose": "^4.5.10",
 		"morgan": "~1.7.0",
+		"random-js": "^1.0.8",
 		"redis": "^2.6.2",
 		"socket.io": "^1.4.8",
 		"socketio-auth": "0.0.5",
