Added verbose output to the logs

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ after_success:
     - ./build-coverage.sh --send
 
 after_failure:
-    - docker-compose logs
+    - docker-compose logs lupus-users lupus-history lupus-game
